# ZIMA

./: .clang-format  .gitignore  LICENSE  README.md  docker.sh
ros_workspace/src/zima_core/: CMakeLists.txt
ros_workspace/src/zima_core/docs/: SoftwareComponents.md
ros_workspace/src/zima_core/src/: main.cpp  zima_auto_cleaning_mode_test.cpp  zima_line_segment_test.cpp  zima_matcher_test.cpp  zima_nav_data_checker.cpp  zima_path_planner_test.cpp  zima_pose_interpolator_test.cpp  zima_probability_map_test.cpp
ros_workspace/src/zima_core/zima/: zima_core_version.cpp  zima_core_version.h  zima_core_version_hash.h
ros_workspace/src/zima_core/zima/algorithm/: algorithm_config.cpp  algorithm_config.h  dijkstra.cpp  dijkstra.h  line_segment_extractor.cpp  line_segment_extractor.h  point_cloud_matcher.cpp  point_cloud_matcher.h  pose_interpolator.cpp  pose_interpolator.h
ros_workspace/src/zima_core/zima/auto_cleaning/: auto_cleaning.cpp  auto_cleaning.h  delemma_handler.cpp  delemma_handler.h  section_cleaning.cpp
ros_workspace/src/zima_core/zima/event/: user_event.cpp  user_event.h
ros_workspace/src/zima_core/zima/grid_map/: map_util.cpp  map_util.h
ros_workspace/src/zima_core/zima/mode/: auto_cleaning_mode.cpp  auto_cleaning_mode.h  auto_scan_house_mode.cpp  auto_scan_house_mode.h  auto_scan_house_mode_event_wrapper.cpp  auto_scan_house_mode_event_wrapper.h  mode_base.cpp  pause_mode.cpp  pause_mode.h  pause_mode_event_wrapper.cpp  pause_mode_event_wrapper.h  standby_mode.cpp  standby_mode.h  standby_mode_event_wrapper.cpp  standby_mode_event_wrapper.h
ros_workspace/src/zima_core/zima/path_planner/: edge_path_planner.cpp  edge_path_planner.h  path_planner.cpp  path_planner.h  quick_scan_house_path_planner.cpp  quick_scan_house_path_planner.h  return_home_planner.cpp  return_home_planner.h  switch_room_section_planner.cpp  switch_room_section_planner.h  zigzag_path_planner.cpp  zigzag_path_planner.h
ros_workspace/src/zima_core/zima/proto/: operation_data.proto  probability_map.proto
ros_workspace/src/zima_core/zima/robot_data/: cleaning_record.cpp  cleaning_record.h  (+9 more)
ros_workspace/src/zima_ros/: README.md  package.xml  zima.rviz
ros_workspace/src/zima_ros/launch/: gazebo_demo.launch  gazebo_mode_test.launch  kobuki_matcher_test.launch  kobuki_mode_test.launch  kobuki_test.launch  xtark_test.launch
ros_workspace/src/zima_ros/rviz/: zima.rviz
ros_workspace/src/zima_ros/src/: util.cpp  zima_house_cleaning_simulation_test.cpp  zima_house_cleaning_with_user_block_simulation_test.cpp  zima_node.cpp  zima_path_planner_test.cpp  zima_room_cleaning_simulation_test.cpp  zima_ros_version.cpp  zima_section_cleaning_simulation_test.cpp  zima_user_select_area_cleaning_simulation_test.cpp  zima_user_select_room_cleaning_simulation_test.cpp
zima_base/: CMakeLists.txt  README.md
zima_base/json_config/: zima_dev_gazebo_config.json
zima_base/src/: main.cpp  zima_json_test.cpp  zima_lock_test.cpp  zima_map_checker.cpp  zima_map_test.cpp  zima_serial_test.cpp  zima_thread_test.cpp
zima_base/zima/: zima_base_version.cpp  zima_base_version.h  zima_base_version_hash.h
zima_base/zima/algorithm/slam/: slam_base.h  slam_base_config.cpp  slam_base_config.h
zima_base/zima/common/: boundingbox.h  config.cpp  debug.cpp  debug.h  gflags.h  json.cpp  lock.cpp  lock.h  macro.h  marker_points.cpp  maths.cpp  maths.h  point_cloud.cpp  point_cloud.h  ratio_sampler.cpp  ratio_sampler.h  steps_recorder.cpp  thread.cpp  transform.h  vector2.h
zima_base/zima/device/: battery.cpp  battery.h  bumper.cpp  bumper.h  button.cpp  button.h  cliff_sensor.cpp  cliff_sensor.h  device.cpp  device.h  device_config.cpp  device_config.h  device_manager.cpp  device_manager.h  gyro.h  lidar.cpp  lidar.h  wall_sensor.h  wheel.cpp
zima_base/zima/grid_map/: map_2d.h  multi_layers_map_2d.cpp  nav_map_2d.cpp  nav_map_2d.h
zima_base/zima/hal/io/: serial.cpp  serial.h
zima_base/zima/hal/system/: cmd_line.cpp  cmd_line.h  file.h  keyboard_listener.cpp  keyboard_listener.h  process.cpp  process.h
zima_base/zima/logger/: logger.h
zima_base/zima/motion/: encircle_obstacle_motion.cpp  encircle_obstacle_motion.h  motion.cpp  motion_config.cpp  retreat_motion.cpp  retreat_motion.h  rotate_motion.h  trace_path_motion.cpp  trace_path_motion.h
zima_base/zima/movement/: encircle_map_edge_movement.cpp  encircle_map_edge_movement.h  encircle_obstacle_movement.cpp  encircle_obstacle_movement.h  movement_config.cpp  movement_config.h  trace_path_movement.cpp  trace_path_movement.h
zima_base/zima/proto/: map.proto  test_clean_map.pb.txt  test_map.pb.txt  test_room_room_map.pb.txt  test_room_sensor_map.pb.txt
zima_base/zima/robot/: chassis.cpp  chassis.h  chassis_controller.h  robot_config.h
zima_base/zima/simulator/: simulator.h
zima_gazebo/: CMakeLists.txt  README.md  package.xml
zima_gazebo/launch/: empty_world.launch  gazebo.launch  spawn.launch  teleop.launch  view_model.launch  world.launch
zima_gazebo/robot/urdf/: config.urdf.xacro  zima_gazebo.urdf.xacro  zima_gazebo_robot.urdf.xacro
zima_gazebo/rviz/: model.rviz
zima_gazebo/worlds/: 4room_1.world
zima_gazebo/worlds/models/4room_1/: model.config  model.sdf
zima_ros/: CMakeLists.txt  zima.rviz
zima_ros/include/gazebo/: zima_gazebo_node.h
zima_ros/include/kobuki/: zima_kobuki_node.h
zima_ros/include/zima_ros/: util.h  zima_node.h  zima_ros_version.h
zima_ros/launch/: gazebo_demo.launch  kobuki_mode_test.launch  kobuki_test.launch  rviz.launch  xtark_test.launch
zima_ros/msg/: BlockArea.msg  VirtualWall.msg
zima_ros/src/: util.cpp  zima_house_cleaning_simulation_test.cpp  zima_house_cleaning_with_user_block_simulation_test.cpp  zima_node.cpp  zima_path_planner_test.cpp  zima_room_cleaning_simulation_test.cpp  zima_ros_version.cpp  zima_section_cleaning_simulation_test.cpp  zima_user_select_area_cleaning_simulation_test.cpp
zima_ros/src/gazebo/: zima_gazebo_node.cpp  zima_matcher_gazebo_test.cpp  zima_mode_gazebo_test.cpp
zima_ros/src/kobuki/: zima_kobuki_node.cpp
zima_ros/src/xtark/: zima_xtark_node.cpp  zima_xtark_test.cpp
(+201 files in other folders)
