<?xml version="1.0"?>
<package format="2">
  <name>zima_ros</name>
  <version>0.0.0</version>
  <description>The zima_ros package</description>

  <maintainer email="bitsoullab@gmail.com">Austin Liu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <!-- <build_depend>cartographer_ros_msgs</build_depend> -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <!-- <build_export_depend>cartographer_ros_msgs</build_export_depend> -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <!-- <exec_depend>cartographer_ros_msgs</exec_depend> -->

</package>
